Messages in outbox not shown as unread (by default) in Thunderbird 115.2.0
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(thunderbird_esr115 fixed, thunderbird121 fixed, thunderbird122 fixed)
People
(Reporter: bazzaman, Assigned: john)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr115+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/116.0.0.0 Safari/537.36
Steps to reproduce:
Compose message and select Send Later.
Actual results:
Message is saved in Outbox but has Read status (and so Outbox folder is not emboldened to signify Outbox message(s) awaiting sending).
Expected results:
When using Send Later (e.g. via CTL+Shift+Enter) or Send Later extension, prior to V115.2.0 Outbox messages were shown as Unread by default (and so it was obvious that there messages awaiting sending as the Outbox folder was emboldened). This no longer happens (i.e. such messages show as read) and so messages in the Outbox can easily be forgotten.
Is this simply a bug that has crept into V115? Or is there a setting (or something accessible via the Config Editor to revert to the previous behaviour?
Thanks
Comment 1•3 years ago
|
||
I have also notice this. Confirm with beta. I don't know if the change is intentional
Comment 2•3 years ago
|
||
It's not an intentional change by me. I can't think why or how that would've happened.
Comment 3•2 years ago
|
||
Now that Thunderbird 115 is gaining traction I have already two reports from users of my add-on Mail Merge, who would also rather have the old behavior back of (new) messages in the Outbox being shown as unread.
I ran mozregression: Daily 2022-08-28 is showing new messages in the Outbox as unread and Daily 2022-08-29 is showing them as read. Here is the pushlog:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=1fb0e33d695a0b483ce679a0ae9827ebdd50c0dc&tochange=43de3d1aa4e7e94417f03a1ebd3b22087fa7521d
Comment 4•2 years ago
|
||
ALexander, thanks for the RR.
Magnus, is there an obvious culprit?
Comment 5•2 years ago
|
||
I confirm this new and unwanted behaviour.
And ask if it is related to https://bugzilla.mozilla.org/show_bug.cgi?id=1798182?
Thank you for fixing this bug.
Comment 7•2 years ago
|
||
This is from https://hg.mozilla.org/comm-central/rev/448f4d89f48f03f916079cc7a4039b93950dfad6#l9.2 - bug 1646473.
| Assignee | ||
Comment 9•2 years ago
|
||
Oh, I will try to fix this.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 11•2 years ago
•
|
||
My changes in bug 1646473 aimed at honoring the read, new and marked flags of the newMsgFlags parameter passed into nsMsgLocalMailFolder::CopyFileMessage().
Messages copied into the outbox set the read flag here:
https://searchfox.org/comm-central/rev/b20a8a71f829d3e24257d6072129254ee6682ca3/mailnews/compose/src/nsMsgCopy.cpp#232
Before bug 1646473 landed, that read flag was ignored. So, why is that read flag set there in the first place?
| Assignee | ||
Comment 12•2 years ago
|
||
Is this try looking good?
https://treeherder.mozilla.org/jobs?repo=try-comm-central&revision=254a77b402d32f10653e062a543afd9e7e4c7d01
Comment 13•2 years ago
|
||
Yes, the try build works as expected! :-)
| Assignee | ||
Comment 14•2 years ago
|
||
@Alexander: If you have the time, could you check if fcc still works as expected, or if they are saved with being unread now (which I think is not desired)
Comment 15•2 years ago
|
||
I am not too familiar with "Fcc", because I don't usually use this myself.
However, these are my test results via "Options -> Send a Copy To":
- In Thunderbird 102 both the outgoing message in the "Outbox" and the copy in the selected folder are "unread".
- In Thunderbird 115 both the outgoing message in the "Outbox" and the copy in the selected folder are "read".
- With the try build both the outgoing message in the "Outbox" and the copy in the selected folder are "unread".
The try build restores the behavior of Thunderbird 102. I am undecided whether the copy in the selected folder should be "read" or "unread"; I am leaning towards your opinion that this is probably not desired.
| Assignee | ||
Comment 16•2 years ago
•
|
||
Ok, so my fix is restoring the original behavior, which is needed for the backport-patch. We can discuss a deviation of the original behavior in a different bug, which will not be backported.
It would be great, if more users following this bug could try out my try build and check for undesired consequences of my fix. It looks like it is not causing additional test fails, but it could still affect untested areas.
Thanks everybody for your help and sorry for messing this up in the first place.
Edit: If the fix passes review, it will probably reach Daily mid next week. So testing that would of course also be fine.
| Assignee | ||
Comment 17•2 years ago
|
||
| Assignee | ||
Updated•2 years ago
|
Comment 18•2 years ago
|
||
| Assignee | ||
Updated•2 years ago
|
Comment 19•2 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/2f18b128ada7
Do not mark messages created by nsMsgCopy::DoCopy as read. r=mkmelin
Comment 20•2 years ago
|
||
I'm now seeing messages in Sent also get set to unread. Should be from this.
Can you reproduce? Maybe we should back out so this doesn't go to beta later today?
Comment 22•2 years ago
|
||
| Assignee | ||
Comment 23•2 years ago
|
||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 24•2 years ago
|
||
Pushed by ikey@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/e3f3d81287b6
Properly set MsgFlags before calling nsMsgCopy::DoCopy. r=mkmelin
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 25•2 years ago
|
||
Comment on attachment 9364541 [details]
Bug 1852428 - Properly set MsgFlags before calling nsMsgCopy::DoCopy. r=mkmelin
[Approval Request Comment]
Regression caused by (bug #): 1646473
User impact if declined: Messages in Outbox are marked as read
Testing completed (on c-c, etc.): Just landed on Daily, but should get time on Beta and get uplifted to ESR very soon
Risk to taking this patch (and alternatives if risky): I do not see a risk.
Comment 26•2 years ago
|
||
Comment on attachment 9364541 [details]
Bug 1852428 - Properly set MsgFlags before calling nsMsgCopy::DoCopy. r=mkmelin
[Triage Comment]
Approved for beta
Comment 28•2 years ago
|
||
| bugherder uplift | ||
Thunderbird 121.0b2:
https://hg.mozilla.org/releases/comm-beta/rev/33d9863db72f
| Assignee | ||
Comment 30•2 years ago
|
||
Comment on attachment 9364541 [details]
Bug 1852428 - Properly set MsgFlags before calling nsMsgCopy::DoCopy. r=mkmelin
[Approval Request Comment]
Regression caused by (bug #): 1646473
User impact if declined: Messages in Outbox are marked as read
Testing completed (on c-c, etc.): Just landed on Daily, but should get time on Beta and get uplifted to ESR very soon
Risk to taking this patch (and alternatives if risky): I do not see a risk. (and alternatives if risky):
Comment 31•2 years ago
|
||
Comment on attachment 9364541 [details]
Bug 1852428 - Properly set MsgFlags before calling nsMsgCopy::DoCopy. r=mkmelin
[Triage Comment]
Approved for esr115
Comment 32•2 years ago
|
||
| bugherder uplift | ||
Thunderbird 115.5.2:
https://hg.mozilla.org/releases/comm-esr115/rev/6a9e2439e035
Description
•