Bug 1852428 - Do not mark messages created by nsMsgCopy::DoCopy as read. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D193359

--HG--
extra : amend_source : b011cfb3fdc6e7c5f3356ae0d01833395405e961